edit hello.yml and roles/hello-world

--- a/roles/hello-world/defaults/main.yml
+++ b/roles/hello-world/defaults/main.yml
@@ -1,10 +1,16 @@
 ---
 
+docker_image: hello-world
+docker_container_name: hello-world
+
 docker_image_tag: 1.1                                                  # Docker image tag for docker build and docker run
 
 ##  Docker repository usage
 docker_images_pull: no
 docker_images_push: no                                                 # using docker in isolation by default. set to yes to push to private registry.
 docker_images_force: yes                                               # rebuild all docker images by default.
+
+docker_published_ports:
+    - "8082:8082/tcp"
 
 docker_repository: 0.0.0.0:5000                                        # Docker registry to push and pull images from
