change permission in /Users/xitongzhou/Desktop/hello-world/roles/rhel-register/tasks/redhat-subscription.yml

--- a/roles/rhel-register/tasks/redhat-subscription.yml
+++ b/roles/rhel-register/tasks/redhat-subscription.yml
@@ -8,6 +8,7 @@
     autosubscribe: true
     force_register: true
   become: yes
+  become_method: sudo
   tags:
     - redhat-subscription
     - redhat-subscription-register
